--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
     "mongoose-aggregate-paginate-v2": "^1.0.6",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "xss-clean": "^0.1.4"
   }
 }
